--- a/requirements.txt
+++ b/requirements.txt
@@ -36,12 +36,18 @@ markupsafe==2.1.1
     #   werkzeug
 mysqlclient==2.1.1
     # via -r requirements.in
+pydantic==1.10.2
+    # via -r requirements.in
+pyjwt==2.5.0
+    # via -r requirements.in
 python-dotenv==0.21.0
     # via -r requirements.in
 sqlalchemy==1.4.41
     # via
     #   alembic
     #   flask-sqlalchemy
+typing-extensions==4.3.0
+    # via pydantic
 waitress==2.1.2
     # via -r requirements.in
 werkzeug==2.2.2
