--- a/requirements.txt
+++ b/requirements.txt
@@ -48,6 +48,10 @@ sqlalchemy==1.4.41
     #   flask-sqlalchemy
 typing-extensions==4.3.0
     # via pydantic
+ua-parser==0.16.1
+    # via user-agents
+user-agents==2.2.0
+    # via -r requirements.in
 waitress==2.1.2
     # via -r requirements.in
 werkzeug==2.2.2
