--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     },
     "dependencies": {
         "buffer": "^6.0.3",
+        "marked": "^4.1.0",
         "svelte-spa-router": "^3.3.0"
     }
 }
