--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,5 @@
 SQLALCHEMY_DATABASE_URI = mysql://{USER}:{PASSWORD}@{HOST}:{PORT}/{DATABASE}
+REDIS_URL = redis://localhost:6379/0
 
 SMTP_HOST = #
 SMTP_PORT = #
@@ -6,3 +7,4 @@ SMTP_USER = #
 SMTP_PASSWORD = #
 
 HOST = https://to-do.kr
+HELP_EMAIL = :SMTP_USER
