--- a/requirements.txt
+++ b/requirements.txt
@@ -6,10 +6,14 @@
 #
 alembic==1.8.1
     # via flask-migrate
+async-timeout==4.0.2
+    # via redis
 click==8.1.3
     # via flask
 colorama==0.4.5
     # via click
+deprecated==1.2.13
+    # via redis
 flask==2.2.2
     # via
     #   -r requirements.in
@@ -36,11 +40,17 @@ markupsafe==2.1.1
     #   werkzeug
 mysqlclient==2.1.1
     # via -r requirements.in
+packaging==21.3
+    # via redis
 pydantic==1.10.2
     # via -r requirements.in
 pyjwt==2.5.0
     # via -r requirements.in
+pyparsing==3.0.9
+    # via packaging
 python-dotenv==0.21.0
+    # via -r requirements.in
+redis==4.3.4
     # via -r requirements.in
 sqlalchemy==1.4.41
     # via
@@ -56,3 +66,5 @@ waitress==2.1.2
     # via -r requirements.in
 werkzeug==2.2.2
     # via flask
+wrapt==1.14.1
+    # via deprecated
