chore: Update prettier ignore

--- a/.prettierignore
+++ b/.prettierignore
@@ -1,10 +1,16 @@
+.git/
+.github/
+.vscode/
+.yarn/
+__pycache__/
 app/
 dist/
-venv/
-node_modules/
 migrations/
+node_modules/
+venv/
 .env
 .env.example
+.flake8
 .jwt.json
 yarn.lock
 start.py
