ci: Change build workflow to create release workflow

--- a/.gitignore
+++ b/.gitignore
@@ -1,12 +1,20 @@
-.env
-.jwt.json
-dist/
-venv/
-__pycache__/
-node_modules/
+# javascript
 .yarn/*
 !.yarn/patches
 !.yarn/plugins
 !.yarn/releases
 !.yarn/sdks
 !.yarn/versions
+node_modules/
+
+# python
+venv/
+__pycache__/
+
+# build output
+dist/
+dist-*.zip
+
+# etc..
+.env
+.jwt.json
