--- a/.github/workflows/flake8.yml
+++ b/.github/workflows/flake8.yml
@@ -2,7 +2,8 @@ name: Code style guide with flake8
 
 on:
   push:
-    branches: [ master ]
+    paths:
+      - '*.py'
   workflow_dispatch:
 
 jobs:
