--- a/package.json
+++ b/package.json
@@ -15,8 +15,7 @@
         "prettier": "^2.7.1",
         "prettier-plugin-svelte": "^2.7.0",
         "svelte": "^3.50.1",
-        "vite": "^3.1.3",
-        "vite-plugin-pwa": "^0.13.1"
+        "vite": "^3.1.3"
     },
     "dependencies": {
         "buffer": "^6.0.3",
