chore: Add db charset in .env.example

--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,4 @@
-SQLALCHEMY_DATABASE_URI = mysql://{USER}:{PASSWORD}@{HOST}:{PORT}/{DATABASE}
+SQLALCHEMY_DATABASE_URI = mysql://{USER}:{PASSWORD}@{HOST}:{PORT}/{DATABASE}?charset=utf8mb4
 REDIS_URL = redis://localhost:6379/0
 
 SMTP_HOST = #
