feat: Create scheduler

--- a/requirements.in
+++ b/requirements.in
@@ -1,11 +1,12 @@
-flask
-flask-sqlalchemy
-flask-migrate
+Flask
+Flask-SQLAlchemy
+Flask-Migrate
 mysqlclient
 waitress
 python-dotenv
 pydantic
-pyjwt
+PyJWT
 redis
-geoip2
-user-agents
+GeoIP2
+User-Agents
+APScheduler
