--- a/requirements.txt
+++ b/requirements.txt
@@ -10,6 +10,8 @@ aiosignal==1.2.0
     # via aiohttp
 alembic==1.8.1
     # via flask-migrate
+apscheduler==3.9.1
+    # via -r requirements.in
 async-timeout==4.0.2
     # via
     #   aiohttp
@@ -80,16 +82,28 @@ pyparsing==3.0.9
     # via packaging
 python-dotenv==0.21.0
     # via -r requirements.in
+pytz==2022.4
+    # via apscheduler
+pytz-deprecation-shim==0.1.0.post0
+    # via tzlocal
 redis==4.3.4
     # via -r requirements.in
 requests==2.28.1
     # via geoip2
+six==1.16.0
+    # via apscheduler
 sqlalchemy==1.4.41
     # via
     #   alembic
     #   flask-sqlalchemy
 typing-extensions==4.3.0
     # via pydantic
+tzdata==2022.4
+    # via
+    #   pytz-deprecation-shim
+    #   tzlocal
+tzlocal==4.2
+    # via apscheduler
 ua-parser==0.16.1
     # via user-agents
 urllib3==1.26.12
@@ -106,3 +120,6 @@ wrapt==1.14.1
     # via deprecated
 yarl==1.8.1
     # via aiohttp
+
+# The following packages are considered to be unsafe in a requirements file:
+# setuptools
