--- a/requirements.txt
+++ b/requirements.txt
@@ -4,26 +4,12 @@
 #
 #    pip-compile
 #
-aiohttp==3.8.3
-    # via geoip2
-aiosignal==1.2.0
-    # via aiohttp
 alembic==1.8.1
     # via flask-migrate
 apscheduler==3.9.1
     # via -r requirements.in
 async-timeout==4.0.2
-    # via
-    #   aiohttp
-    #   redis
-attrs==22.1.0
-    # via aiohttp
-certifi==2022.9.24
-    # via requests
-charset-normalizer==2.1.1
-    # via
-    #   aiohttp
-    #   requests
+    # via redis
 click==8.1.3
     # via flask
 colorama==0.4.5
@@ -41,18 +27,8 @@ flask-sqlalchemy==2.5.1
     # via
     #   -r requirements.in
     #   flask-migrate
-frozenlist==1.3.1
-    # via
-    #   aiohttp
-    #   aiosignal
-geoip2==4.6.0
-    # via -r requirements.in
 greenlet==1.1.3
     # via sqlalchemy
-idna==3.4
-    # via
-    #   requests
-    #   yarl
 itsdangerous==2.1.2
     # via flask
 jinja2==3.1.2
@@ -64,12 +40,6 @@ markupsafe==2.1.1
     #   jinja2
     #   mako
     #   werkzeug
-maxminddb==2.2.0
-    # via geoip2
-multidict==6.0.2
-    # via
-    #   aiohttp
-    #   yarl
 mysqlclient==2.1.1
     # via -r requirements.in
 packaging==21.3
@@ -88,8 +58,6 @@ pytz-deprecation-shim==0.1.0.post0
     # via tzlocal
 redis==4.3.4
     # via -r requirements.in
-requests==2.28.1
-    # via geoip2
 six==1.16.0
     # via apscheduler
 sqlalchemy==1.4.41
@@ -106,10 +74,6 @@ tzlocal==4.2
     # via apscheduler
 ua-parser==0.16.1
     # via user-agents
-urllib3==1.26.12
-    # via
-    #   geoip2
-    #   requests
 user-agents==2.2.0
     # via -r requirements.in
 waitress==2.1.2
@@ -118,8 +82,6 @@ werkzeug==2.2.2
     # via flask
 wrapt==1.14.1
     # via deprecated
-yarl==1.8.1
-    # via aiohttp
 
 # The following packages are considered to be unsafe in a requirements file:
 # setuptools
