--- a/jsconfig.json
+++ b/jsconfig.json
@@ -20,6 +20,9 @@
         "skipLibCheck": true,
         "forceConsistentCasingInFileNames": true,
         "baseUrl": ".",
+        "paths": {
+            "routes/*": ["./src/routes/*"]
+        },
         /**
          * Typecheck JS in `.svelte` and `.js` files by default.
          * Disable this if you'd like to use dynamic types.
