--- a/package.json
+++ b/package.json
@@ -9,8 +9,12 @@
         "p": "prettier . --check",
         "p:write": "prettier . --write"
     },
+    "pre-commit": [
+        "p"
+    ],
     "devDependencies": {
         "@sveltejs/vite-plugin-svelte": "^1.0.2",
+        "pre-commit": "^1.2.2",
         "prettier": "^2.7.1",
         "prettier-plugin-svelte": "^2.7.1",
         "svelte": "^3.50.1",
