chore: Split app style.css

--- a/jsconfig.json
+++ b/jsconfig.json
@@ -21,7 +21,8 @@
         "forceConsistentCasingInFileNames": true,
         "baseUrl": ".",
         "paths": {
-            "routes/*": ["./src/routes/*"]
+            "routes/*": ["./src/routes/*"],
+            "styles/*": ["./src/styles/*"]
         },
         /**
          * Typecheck JS in `.svelte` and `.js` files by default.
