--- a/requirements.txt
+++ b/requirements.txt
@@ -16,6 +16,8 @@ colorama==0.4.5
     # via click
 deprecated==1.2.13
     # via redis
+flake8==5.0.4
+    # via -r requirements.in
 flask==2.2.2
     # via
     #   -r requirements.in
@@ -40,12 +42,18 @@ markupsafe==2.1.1
     #   jinja2
     #   mako
     #   werkzeug
+mccabe==0.7.0
+    # via flake8
 mysqlclient==2.1.1
     # via -r requirements.in
 packaging==21.3
     # via redis
+pycodestyle==2.9.1
+    # via flake8
 pydantic==1.10.2
     # via -r requirements.in
+pyflakes==2.5.0
+    # via flake8
 pyjwt==2.5.0
     # via -r requirements.in
 pyparsing==3.0.9
