--- a/requirements.txt
+++ b/requirements.txt
@@ -48,6 +48,8 @@ mysqlclient==2.1.1
     # via -r requirements.in
 packaging==21.3
     # via redis
+paste==3.5.2
+    # via -r requirements.in
 pycodestyle==2.9.1
     # via flake8
 pydantic==1.10.2
@@ -67,7 +69,9 @@ pytz-deprecation-shim==0.1.0.post0
 redis==4.3.4
     # via -r requirements.in
 six==1.16.0
-    # via apscheduler
+    # via
+    #   apscheduler
+    #   paste
 sqlalchemy==1.4.41
     # via
     #   alembic
