--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -1,3 +1,7 @@
 {
-    "recommendations": ["svelte.svelte-vscode"]
+    "recommendations": [
+        "ms-python.python",
+        "svelte.svelte-vscode",
+        "esbenp.prettier-vscode"
+    ]
 }
