chore: Change vscode settings
Add `pytest_cache` in exclude list

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,6 +2,7 @@
     "files.exclude": {
         ".git/": true,
         ".github/": true,
+        ".pytest_cache/": true,
         ".vscode/": true,
         ".yarn/": true,
         "dist/": true,
