--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -1,7 +1,3 @@
 {
-    "recommendations": [
-        "ms-python.python",
-        "svelte.svelte-vscode",
-        "esbenp.prettier-vscode"
-    ]
+    "recommendations": ["ms-python.python", "svelte.svelte-vscode", "esbenp.prettier-vscode"]
 }
