chore: Update vscode settings

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -10,7 +10,13 @@
         "**/__pycache__/": true,
         "venv/": true
     },
+    "[javascript]": {
+        "editor.maxTokenizationLineLength": 2500,
+        "editor.defaultFormatter": "esbenp.prettier-vscode"
+    },
+    "[svelte]": {
+        "editor.defaultFormatter": "esbenp.prettier-vscode"
+    },
     "editor.formatOnSave": true,
-    "editor.defaultFormatter": "esbenp.prettier-vscode",
     "python.linting.flake8Enabled": true
 }
