--- a/requirements.txt
+++ b/requirements.txt
@@ -10,10 +10,14 @@ apscheduler==3.9.1
     # via -r requirements.in
 async-timeout==4.0.2
     # via redis
+attrs==22.1.0
+    # via pytest
 click==8.1.3
     # via flask
 colorama==0.4.5
-    # via click
+    # via
+    #   click
+    #   pytest
 deprecated==1.2.13
     # via redis
 flake8==5.0.4
@@ -25,17 +29,19 @@ flask==2.2.2
     #   flask-sqlalchemy
 flask-migrate==3.1.0
     # via -r requirements.in
-flask-sqlalchemy==2.5.1
+flask-sqlalchemy==3.0.2
     # via
     #   -r requirements.in
     #   flask-migrate
-greenlet==1.1.3
+greenlet==1.1.3.post0
     # via sqlalchemy
+iniconfig==1.1.1
+    # via pytest
 itsdangerous==2.1.2
     # via flask
 jinja2==3.1.2
     # via flask
-mako==1.2.2
+mako==1.2.3
     # via alembic
 markupsafe==2.1.1
     # via
@@ -47,22 +53,30 @@ mccabe==0.7.0
 mysqlclient==2.1.1
     # via -r requirements.in
 packaging==21.3
-    # via redis
+    # via
+    #   pytest
+    #   redis
 paste==3.5.2
     # via -r requirements.in
+pluggy==1.0.0
+    # via pytest
+py==1.11.0
+    # via pytest
 pycodestyle==2.9.1
     # via flake8
 pydantic==1.10.2
     # via -r requirements.in
 pyflakes==2.5.0
     # via flake8
-pyjwt==2.5.0
+pyjwt==2.6.0
     # via -r requirements.in
 pyparsing==3.0.9
     # via packaging
+pytest==7.1.3
+    # via -r requirements.in
 python-dotenv==0.21.0
     # via -r requirements.in
-pytz==2022.4
+pytz==2022.5
     # via apscheduler
 pytz-deprecation-shim==0.1.0.post0
     # via tzlocal
@@ -72,13 +86,15 @@ six==1.16.0
     # via
     #   apscheduler
     #   paste
-sqlalchemy==1.4.41
+sqlalchemy==1.4.42
     # via
     #   alembic
     #   flask-sqlalchemy
-typing-extensions==4.3.0
+tomli==2.0.1
+    # via pytest
+typing-extensions==4.4.0
     # via pydantic
-tzdata==2022.4
+tzdata==2022.5
     # via
     #   pytz-deprecation-shim
     #   tzlocal
