--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,3 +1,4 @@
 sonar.projectKey=chick0_to-do_AYPfDgmGYItQNpOw1wCF
 sonar.exclusions=migrations/**
 sonar.python.version=3.9, 3.10
+sonar.scm.provider=git
