chore: Remove client files

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -4,26 +4,10 @@
         ".github/": true,
         ".pytest_cache/": true,
         ".vscode/": true,
-        ".yarn/": true,
-        "dist/": true,
-        "node_modules/": true,
         "**/__pycache__/": true,
         "venv/": true
     },
-    "[javascript]": {
-        "editor.maxTokenizationLineLength": 2500,
-        "editor.defaultFormatter": "esbenp.prettier-vscode",
-        "editor.formatOnSave": true,
-    },
-    "[svelte]": {
-        "editor.defaultFormatter": "esbenp.prettier-vscode",
-        "editor.formatOnSave": true
-    },
     "python.linting.enabled": true,
     "python.linting.flake8Enabled": true,
-    "python.linting.pylintEnabled": false,
-    "svelte.plugin.svelte.compilerWarnings": {
-        "unused-export-let": "ignore",
-        "a11y-click-events-have-key-events": "ignore"
-    }
+    "python.linting.pylintEnabled": false
 }
