--- a/requirements-dev.txt
+++ b/requirements-dev.txt
@@ -6,30 +6,22 @@
 #
 alembic==1.8.1
     # via flask-migrate
-apscheduler==3.9.1
+apscheduler==3.9.1.post1
     # via -r .\requirements.in
 async-timeout==4.0.2
     # via redis
-attrs==22.1.0
-    # via pytest
 click==8.1.3
     # via flask
 colorama==0.4.6
-    # via
-    #   click
-    #   pytest
-deprecated==1.2.13
-    # via redis
-exceptiongroup==1.0.1
-    # via pytest
-flake8==5.0.4
+    # via click
+flake8==6.0.0
     # via -r ./requirements-dev.in
 flask==2.2.2
     # via
     #   -r .\requirements.in
     #   flask-migrate
     #   flask-sqlalchemy
-flask-migrate==3.1.0
+flask-migrate==4.0.0
     # via -r .\requirements.in
 flask-sqlalchemy==3.0.2
     # via
@@ -37,13 +29,11 @@ flask-sqlalchemy==3.0.2
     #   flask-migrate
 greenlet==2.0.1
     # via sqlalchemy
-iniconfig==1.1.1
-    # via pytest
 itsdangerous==2.1.2
     # via flask
 jinja2==3.1.2
     # via flask
-mako==1.2.3
+mako==1.2.4
     # via alembic
 markupsafe==2.1.1
     # via
@@ -55,43 +45,35 @@ mccabe==0.7.0
 mysqlclient==2.1.1
     # via -r .\requirements.in
 packaging==21.3
-    # via
-    #   pytest
-    #   redis
+    # via redis
 paste==3.5.2
     # via -r .\requirements.in
-pluggy==1.0.0
-    # via pytest
-pycodestyle==2.9.1
+pycodestyle==2.10.0
     # via flake8
 pydantic==1.10.2
     # via -r .\requirements.in
-pyflakes==2.5.0
+pyflakes==3.0.1
     # via flake8
 pyjwt==2.6.0
     # via -r .\requirements.in
 pyparsing==3.0.9
     # via packaging
-pytest==7.2.0
-    # via -r ./requirements-dev.in
 python-dotenv==0.21.0
     # via -r .\requirements.in
 pytz==2022.6
     # via apscheduler
 pytz-deprecation-shim==0.1.0.post0
     # via tzlocal
-redis==4.3.4
+redis==4.3.5
     # via -r .\requirements.in
 six==1.16.0
     # via
     #   apscheduler
     #   paste
-sqlalchemy==1.4.43
+sqlalchemy==1.4.44
     # via
     #   alembic
     #   flask-sqlalchemy
-tomli==2.0.1
-    # via pytest
 typing-extensions==4.4.0
     # via pydantic
 tzdata==2022.6
@@ -108,8 +90,6 @@ waitress==2.1.2
     # via -r .\requirements.in
 werkzeug==2.2.2
     # via flask
-wrapt==1.14.1
-    # via deprecated
 
 # The following packages are considered to be unsafe in a requirements file:
 # setuptools
