--- a/requirements.txt
+++ b/requirements.txt
@@ -6,7 +6,7 @@
 #
 alembic==1.8.1
     # via flask-migrate
-apscheduler==3.9.1
+apscheduler==3.9.1.post1
     # via -r requirements.in
 async-timeout==4.0.2
     # via redis
@@ -14,14 +14,12 @@ click==8.1.3
     # via flask
 colorama==0.4.6
     # via click
-deprecated==1.2.13
-    # via redis
 flask==2.2.2
     # via
     #   -r requirements.in
     #   flask-migrate
     #   flask-sqlalchemy
-flask-migrate==3.1.0
+flask-migrate==4.0.0
     # via -r requirements.in
 flask-sqlalchemy==3.0.2
     # via
@@ -33,7 +31,7 @@ itsdangerous==2.1.2
     # via flask
 jinja2==3.1.2
     # via flask
-mako==1.2.3
+mako==1.2.4
     # via alembic
 markupsafe==2.1.1
     # via
@@ -58,13 +56,13 @@ pytz==2022.6
     # via apscheduler
 pytz-deprecation-shim==0.1.0.post0
     # via tzlocal
-redis==4.3.4
+redis==4.3.5
     # via -r requirements.in
 six==1.16.0
     # via
     #   apscheduler
     #   paste
-sqlalchemy==1.4.43
+sqlalchemy==1.4.44
     # via
     #   alembic
     #   flask-sqlalchemy
@@ -84,8 +82,6 @@ waitress==2.1.2
     # via -r requirements.in
 werkzeug==2.2.2
     # via flask
-wrapt==1.14.1
-    # via deprecated
 
 # The following packages are considered to be unsafe in a requirements file:
 # setuptools
